--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -1,6 +1,25 @@
+nav {
+  width: 100%;
+  height: 64px;
+  background-color: #fff;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  padding: 2rem 10rem;
+
+  border-bottom: 2px solid #f9f9f9;
+  position: sticky;
+}
+
+.logo-image {
+  width: 65px;
+}
+
 ul li {
   list-style-type: none;
-  padding: 0.5rem 2rem;
+  padding: 0 2rem;
 }
 
 ul {
@@ -9,46 +28,40 @@ ul {
   justify-content: end;
 }
 
-nav {
-  height: 5rem;
-  background-color: antiquewhite;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  padding: 0rem 5rem;
+ul li a {
+  text-decoration: none;
+  color: #333;
 }
 
-button {
-  background-color: blanchedalmond;
-  border-radius: 50%;
-
-  position: relative;
-
-  width: 3rem;
-  height: 3rem;
-  padding: 0rem;
+ul li a:hover {
+  text-decoration: none;
+  color: #008b94;
 }
 
 .shoppingcart-icon {
-  font-size: 1.5rem;
-  color: blue;
+  font-size: 1.3rem;
+  cursor: pointer;
+}
+
+.shoppingcart-span {
+  position: relative;
 }
 
 .rounded-circle {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 1rem;
-  height: 1rem;
+  width: 1.3rem;
+  height: 1.3rem;
+  padding: 0.1rem;
 
+  font-size: 0.7rem;
   position: absolute;
   bottom: 0;
   right: 0;
-  background-color: red;
+  background-color: rgb(203, 87, 87);
   color: white;
-  padding: 0.3rem;
-  border-radius: 50%;
 
-  transform: translate(25%, 25%);
+  border-radius: 50%;
+  transform: translate(80%, -60%);
 }
