--- a/src/components/shoppingcart.css
+++ b/src/components/shoppingcart.css
@@ -1,19 +1,26 @@
 .shoppingcart-container {
-  width: 30%;
-  height: 100vh;
+  width: 25%;
+  height: 100%;
 
   position: absolute;
-  bottom: 0;
   top: 0;
   right: 0;
 
-  padding: 2rem 3rem;
+  padding: 1rem;
   background-color: #d9e8e5;
   z-index: 3;
+  box-sizing: border-box;
 }
 
 .close-cart {
   position: absolute;
   top: 1rem;
   right: 1rem;
+}
+
+.shoppingcart-items {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  box-sizing: border-box;
 }
