--- a/src/pages/store.css
+++ b/src/pages/store.css
@@ -1,11 +1,12 @@
 .store-container {
-    display: flex;
-    flex-wrap: wrap;
+  display: flex;
+  flex-wrap: wrap;
 
-    gap: 3rem;
-    align-items: center;
-    justify-content: flex-start;
+  gap: 3rem;
+  align-items: center;
+  justify-content: flex-start;
 
-    padding: 4rem 5rem;
-
+  padding: 0rem 5rem;
+  width: 100%;
+  height: 100%;
 }
