--- a/src/components/carditem.css
+++ b/src/components/carditem.css
@@ -1,10 +1,23 @@
-.card-item-sh {
+.cart-card-item {
+  width: 100%;
+
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
   align-items: center;
+  justify-content: stretch;
+  align-self: stretch;
 
-  overflow: scroll;
-  width: 100%;
+  gap: 2rem;
+
+  overflow: hidden;
+
   box-sizing: border-box;
+}
+
+.card-item-image {
+  width: 6rem;
+  height: 4rem;
+  object-fit: cover;
+
+  border-radius: 0.5rem;
 }
