--- a/src/components/shoppingcart.css
+++ b/src/components/shoppingcart.css
@@ -1,5 +1,5 @@
 .shoppingcart-container {
-  width: 25%;
+  width: 45%;
   height: 100%;
 
   position: absolute;
@@ -22,5 +22,7 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+
   box-sizing: border-box;
+  gap: 1rem;
 }
