--- a/src/components/storeitem.css
+++ b/src/components/storeitem.css
@@ -5,14 +5,17 @@
   margin: 0;
   z-index: 3;
 }
+
 .card-item {
   display: flex;
   flex-direction: column;
+  align-self: stretch;
   padding: 0;
 
   background-color: #fefefe;
   border: 1px solid rgba(51, 51, 51, 0.446);
-  width: 25rem;
+  width: 20rem;
+  min-height: 20rem;
   border-radius: 0.8rem;
 }
 
@@ -29,6 +32,7 @@
   display: flex;
   justify-content: space-between;
 }
+
 .card-item-actions {
   padding: 1rem;
   display: flex;
