--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -10,7 +10,9 @@ nav {
   padding: 2rem 10rem;
 
   border-bottom: 2px solid #f9f9f9;
-  position: sticky;
+  position: fixed;
+  top: 0;
+  z-index: 1000;
 }
 
 .logo-image {
