--- a/src/components/storeitem.css
+++ b/src/components/storeitem.css
@@ -1,3 +1,16 @@
+.card-item {
+  display: flex;
+  flex-direction: column;
+  align-self: stretch;
+
+  background-color: rgba(255, 255, 255, 0.644);
+  border: 1px solid rgba(51, 51, 51, 0.446);
+  width: 20rem;
+  height: 27rem;
+  padding: 1rem;
+  border-radius: 0.8rem;
+}
+
 .card-image-container {
   width: 100%;
   height: 200px;
@@ -6,44 +19,120 @@
   z-index: 3;
 }
 
-.card-item {
-  display: flex;
-  flex-direction: column;
-  align-self: stretch;
-  padding: 0;
-
-  background-color: #fefefe;
-  border: 1px solid rgba(51, 51, 51, 0.446);
-  width: 20rem;
-  min-height: 20rem;
-  border-radius: 0.8rem;
-}
-
 .card-image {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  border-radius: 0.7rem 0.7rem 0 0;
+  border-radius: 0.7rem;
   z-index: 4;
 }
 
 .card-item-data {
-  padding: 1rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  padding: 1.5rem 0.2rem;
+}
+
+.card-item-data h1 {
+  font-size: 1.4rem;
+  color: #55bea9;
+  border-bottom: 1.4px solid rgba(51, 51, 51, 0.196);
+}
+
+.card-item-data h3 {
+  font-size: 1rem;
+  color: rgb(98, 96, 96);
 }
 
 .card-item-actions {
-  padding: 1rem;
   display: flex;
   align-items: center;
   justify-content: space-around;
 }
 
-.button-card {
-  width: 3rem;
-  background-color: #fefefe;
-  color: black;
-  border-radius: 1px;
+.card-item-actions-active {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+
+  align-items: center;
+  justify-content: center;
+}
+
+.card-item-actionbtns {
+  background-color: #d9e8e52b;
+  border: 1px solid #d9e8e5;
+  padding: 1rem 2rem;
+  border-radius: 8px;
+
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.addtocart-button {
+  width: 10rem;
+  background-color: #d9e8e5;
+  border: 1px solid transparent;
+  padding: 0.6rem 1rem;
+  border-radius: 8px;
+  position: relative;
   cursor: pointer;
+
+  color: #5b897f;
+  font-size: 14px;
+}
+
+.addtocart-button:hover {
+  background-color: #c7e7e1;
+  border: 1px solid #b0cbc5;
+  bottom: -2px;
+}
+
+.actionbutton-card {
+  width: 1.5rem;
+  height: 1.5rem;
+
+  background-color: #d9e8e5;
+  border: 1px solid #b0cbc5;
+
+  color: #6a9087;
+  border-radius: 50%;
+  cursor: pointer;
+  position: relative;
+
+  font-size: 0.9rem;
+}
+
+.actionbutton-card:hover {
+  background-color: #c7e7e1;
+  border: 1px solid #b0cbc5;
+  bottom: -2px;
+}
+
+.actionbutton-card-text {
+  color: #6a9087;
+  font-size: 14px;
+}
+
+.delete-button-card {
+  width: 8rem;
+  background-color: #e5adad;
+  border: 1px solid #d78e8eb3;
+  padding: 0.6rem 1rem;
+  border-radius: 8px;
+  position: relative;
+  cursor: pointer;
+
+  color: #fff;
+
+  font-size: 14px;
+}
+
+.delete-button-card:hover {
+  background-color: #e38a8a;
+  border: 1px solid #d78e8eb3;
+  bottom: -2px;
 }
