Styling changes - advancing with shopping cart

--- a/src/pages/store.css
+++ b/src/pages/store.css
@@ -8,9 +8,9 @@
   align-items: center;
   justify-content: flex-start;
 
-  padding: 5rem 10rem;
+  padding: 8rem 10rem;
 
-  background-color: #d9e8e577;
+  background-color: #d9e8e5;
   background-image: url(/public/images/grid-bg1.png);
   background-repeat: repeat;
 }
