--- a/src/components/shoppingcart.css
+++ b/src/components/shoppingcart.css
@@ -1,15 +1,19 @@
 .shoppingcart-container {
   width: 45%;
-  height: 100%;
-
+  height: 75%;
   position: absolute;
-  top: 0;
+  top: 65px;
   right: 0;
+  overflow-y: scroll;
 
   padding: 1rem;
-  background-color: #d9e8e5;
-  z-index: 3;
+  /*  background-color: #d9e8e5bf;*/
+  background-color: rgba(255, 255, 255, 0.378);
+  backdrop-filter: blur(15px);
+  z-index: 1001;
   box-sizing: border-box;
+  border-radius: 1rem;
+  border: 1px solid #ffffff3a;
 }
 
 .close-cart {
@@ -22,6 +26,8 @@
   width: 100%;
   display: flex;
   flex-direction: column;
+  align-items: stretch;
+  justify-content: stretch;
 
   box-sizing: border-box;
   gap: 1rem;
