--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -61,7 +61,7 @@ ul li a:hover {
   position: absolute;
   bottom: 0;
   right: 0;
-  background-color: rgb(203, 87, 87);
+  background-color: #e38a8a;
   color: white;
 
   border-radius: 50%;
