--- a/src/components/cartitem.css
+++ b/src/components/cartitem.css
@@ -2,6 +2,7 @@
   min-width: 100%;
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
   gap: 2rem;
 
@@ -10,6 +11,12 @@
   box-sizing: border-box;
   border-bottom: 1px solid rgba(51, 51, 51, 0.099);
   padding: 1.5rem 1rem;
+}
+.cart-card-item-left {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
 }
 
 .card-item-image {
