--- a/src/components/cartitem.css
+++ b/src/components/cartitem.css
@@ -15,8 +15,10 @@
 .cart-card-item-left {
   display: flex;
   align-items: center;
-  justify-content: space-between;
-  gap: 3rem;
+  justify-content: flex-start;
+
+  flex-grow: 1;
+  gap: 1rem;
 }
 
 .card-item-image {
@@ -27,8 +29,48 @@
   border-radius: 0.5rem;
 }
 
+.card-item-data-cart {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  width: 100%;
+  flex-grow: 1;
+  flex-basis: 33.3%;
+  text-align: left;
+}
+
+.carditem-data-name {
+  font-size: 0.8rem;
+  color: #333;
+}
+
+.carditem-data-quantity {
+  text-align: left;
+  color: #333;
+  font-size: 0.8rem;
+}
+.carditem-data-price {
+  text-align: left;
+  color: #333;
+  font-size: 0.8rem;
+}
+
+.carditem-data-totalprice {
+  text-align: left;
+  color: #333;
+  font-size: 1.2rem;
+}
+
 .deleteitem-button {
-  width: 1rem;
+  width: 1.7rem;
+  height: 1.7rem;
+
+  padding: 0.1rem;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
   background-color: #e5adad;
   border: 1px solid #d78e8eb3;
   border-radius: 4px;
@@ -36,4 +78,12 @@
   cursor: pointer;
 
   color: #fff;
+}
+
+.deleteitem-button:hover {
+  background-color: #e58686;
+}
+
+.deleteitem-icon {
+  width: 6rem;
 }
