READ.me file update and other changes

--- a/src/components/shoppingcart.css
+++ b/src/components/shoppingcart.css
@@ -1,7 +1,7 @@
 .shoppingcart-container {
   width: 40%;
   height: 75%;
-  position: absolute;
+  position: fixed;
   top: 65px;
   right: 0;
   overflow-y: scroll;
