--- a/src/pages/store.css
+++ b/src/pages/store.css
@@ -11,6 +11,6 @@
   padding: 8rem 10rem;
 
   background-color: #d9e8e5;
-  background-image: url(/public/images/grid-bg1.png);
+  background-image: url(/public/assets/images/grid-bg1.png);
   background-repeat: repeat;
 }
